# usbinfo

./: README.md  autoclean.sh  autogen.sh  configure.ac
scripts/: git-version-gen  make-archive  make-changelog  make-release  make-version
src/: Makefile.am  main.c  usbinfo.c  usbinfo.h  xstring.c  xstring.h
